# adia-one-v2

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: test_adia.py
tests/: test_adia_file.py
