[project]
name = "adiaonev2"
version = "0.1.0"
description = ""
authors = [
    {name = "atef",email = "rgjcllljgvb@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.1.0,<27.0.0)",
    "mypy (>=1.19.1,<2.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
